# artNeuralNet

./: .gitignore  pyproject.toml
data/: artdataloader.py  createdirectory.py  dataset.py
data/files/: artist_images.csv  artists.csv
src/artneuralnet/: resnet.py  test.py
src/training/: hyperparameters.py
tests/: test_results.txt
