[project]
name = "artneuralnet"
version = "0.1.0"
description = ""
authors = [
    {name = "Vaishnavi",email = "vs2753@nyu.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kagglehub[pandas-datasets] (>=0.3.12,<0.4.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "psutil (>=5.9.0,<6.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[tool.poetry]
packages = [{include = "artneuralnet", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
