[project]
name = "artneuralnet"
version = "0.1.0"
description = ""
authors = [
    {name = "Vaishnavi",email = "vs2753@nyu.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
[tool.poetry.dependencies]
python = ">=3.12,<3.14"
kagglehub = { version = ">=0.3.12,<0.4.0", extras = ["pandas-datasets"] }
kaggle = ">=1.7.4.5,<2.0.0.0"
scikit-image = ">=0.25.2,<0.26.0"
jupyter = ">=1.1.1,<2.0.0"
psutil = ">=5.9.0,<6.0.0"
torch = {version = "2.6.*", source = "pytorch-cu124"}
torchvision = {version = "0.21.*", source = "pytorch-cu124"}
torchaudio = {version = "2.6.*", source = "pytorch-cu124"}

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry]
packages = [{include = "artneuralnet", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
